// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Changelog does not show a See More option below the filters if seven or less filter values are available 1`] = `
<div>
  <div
    class="changelog-filter col-md-3"
  >
    <div
      class="sidebar-filters"
    >
      <div
        class="filter-header"
      >
        <h3>
          refine-by
        </h3>
      </div>
      <input
        aria-label="Refine By Term"
        class="input-small text-filter"
        placeholder="contains-text"
        type="text"
      />
      <div
        class="filter-subsection jira-components semi-bold"
      >
        component
        <div
          class="filter-checkbox-container"
        >
          <label>
            <input
              class="filter-checkbox"
              name="component 1"
              type="checkbox"
              value="1"
            />
            <span
              class="filter-checkbox-label"
            >
              component 1
            </span>
          </label>
        </div>
        <div
          class="filter-checkbox-container"
        >
          <label>
            <input
              class="filter-checkbox"
              name="component 2"
              type="checkbox"
              value="2"
            />
            <span
              class="filter-checkbox-label"
            >
              component 2
            </span>
          </label>
        </div>
      </div>
    </div>
    <a
      class="additional-info"
      href="/commerce-release-notes"
    >
      <div
        class="sidebar-cta"
      >
        <svg
          class="lexicon-icon-product-logo"
        >
          <use
            xlink:href="#commerce"
          />
        </svg>
        <h4>
          Liferay Commerce Release Notes
        </h4>
        <svg
          class="lexicon-icon lexicon-icon-arrow-right"
        >
          <use
            xlink:href="#arrow-right"
          />
        </svg>
      </div>
    </a>
  </div>
  <div
    class="col-md-9"
  >
    <h2
      id="changelog"
    >
      changelog
    </h2>
    <h5
      class="secondary-text-color section-subtitle"
    >
      description
    </h5>
    <div
      class="results-count secondary-font"
    >
      x-results
    </div>
    <table
      class="table changelog-table table-autofit table-list"
      role="table"
    >
      <thead>
        <tr>
          <th
            class="lfr-summary-column table-cell-content"
          >
            summary
          </th>
          <th
            class="lfr-component-column"
          >
            component
          </th>
          <th
            class="lfr-release-column"
          >
            release
             
            <svg
              aria-label="Sort"
              class="arrow-down desc lexicon-icon sorting-indicator"
              role="button"
            >
              <use
                xlink:href="#arrow-down"
              />
            </svg>
          </th>
          <th
            class="lfr-key-column"
          >
            key
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="journal-article-row"
          id="LPD-90100GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 1
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            Frontend Infrastructure &gt; WYSIWYG
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              LPD-90100
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="LPD-85155GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 2
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            Accessibility
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              LPD-85155
            </a>
          </td>
        </tr>
      </tbody>
    </table>
    <nav
      aria-label="pagination navigation"
      class="pagination"
      role="navigation"
    >
      <ul>
        <li
          class="pagination-current"
        >
          <span
            aria-current="true"
            aria-label="current page, page 1"
          >
            1
          </span>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`Changelog renders changelog results correctly 1`] = `
<div>
  <div
    class="changelog-filter col-md-3"
  >
    <div
      class="sidebar-filters"
    >
      <div
        class="filter-header"
      >
        <h3>
          refine-by
        </h3>
      </div>
      <input
        aria-label="Refine By Term"
        class="input-small text-filter"
        placeholder="contains-text"
        type="text"
      />
      <div
        class="filter-subsection jira-components semi-bold"
      >
        component
        <div
          class="filter-checkbox-container"
        >
          <label>
            <input
              class="filter-checkbox"
              name="component 0"
              type="checkbox"
              value="0"
            />
            <span
              class="filter-checkbox-label"
            >
              component 0
            </span>
          </label>
        </div>
        <div
          class="filter-checkbox-container"
        >
          <label>
            <input
              class="filter-checkbox"
              name="component 1"
              type="checkbox"
              value="1"
            />
            <span
              class="filter-checkbox-label"
            >
              component 1
            </span>
          </label>
        </div>
        <div
          class="filter-checkbox-container"
        >
          <label>
            <input
              class="filter-checkbox"
              name="component 2"
              type="checkbox"
              value="2"
            />
            <span
              class="filter-checkbox-label"
            >
              component 2
            </span>
          </label>
        </div>
        <div
          class="filter-checkbox-container"
        >
          <label>
            <input
              class="filter-checkbox"
              name="component 3"
              type="checkbox"
              value="3"
            />
            <span
              class="filter-checkbox-label"
            >
              component 3
            </span>
          </label>
        </div>
        <div
          class="filter-checkbox-container"
        >
          <label>
            <input
              class="filter-checkbox"
              name="component 4"
              type="checkbox"
              value="4"
            />
            <span
              class="filter-checkbox-label"
            >
              component 4
            </span>
          </label>
        </div>
        <div
          class="filter-checkbox-container"
        >
          <label>
            <input
              class="filter-checkbox"
              name="component 5"
              type="checkbox"
              value="5"
            />
            <span
              class="filter-checkbox-label"
            >
              component 5
            </span>
          </label>
        </div>
        <div
          class="filter-checkbox-container"
        >
          <label>
            <input
              class="filter-checkbox"
              name="component 6"
              type="checkbox"
              value="6"
            />
            <span
              class="filter-checkbox-label"
            >
              component 6
            </span>
          </label>
        </div>
      </div>
      <div
        class="more-options"
      >
        <button
          class="btn btn-md btn-link"
          type="button"
        >
          see-more
        </button>
      </div>
    </div>
    <a
      class="additional-info"
      href="/commerce-release-notes"
    >
      <div
        class="sidebar-cta"
      >
        <svg
          class="lexicon-icon-product-logo"
        >
          <use
            xlink:href="#commerce"
          />
        </svg>
        <h4>
          Liferay Commerce Release Notes
        </h4>
        <svg
          class="lexicon-icon lexicon-icon-arrow-right"
        >
          <use
            xlink:href="#arrow-right"
          />
        </svg>
      </div>
    </a>
  </div>
  <div
    class="col-md-9"
  >
    <h2
      id="changelog"
    >
      changelog
    </h2>
    <h5
      class="secondary-text-color section-subtitle"
    >
      description
    </h5>
    <div
      class="results-count secondary-font"
    >
      x-results
    </div>
    <table
      class="table changelog-table table-autofit table-list"
      role="table"
    >
      <thead>
        <tr>
          <th
            class="lfr-summary-column table-cell-content"
          >
            summary
          </th>
          <th
            class="lfr-component-column"
          >
            component
          </th>
          <th
            class="lfr-release-column"
          >
            release
             
            <svg
              aria-label="Sort"
              class="arrow-down desc lexicon-icon sorting-indicator"
              role="button"
            >
              <use
                xlink:href="#arrow-down"
              />
            </svg>
          </th>
          <th
            class="lfr-key-column"
          >
            key
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="journal-article-row"
          id="LPD-90100GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 1
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            Frontend Infrastructure &gt; WYSIWYG
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              LPD-90100
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="LPD-85155GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 2
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            Accessibility
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              LPD-85155
            </a>
          </td>
        </tr>
      </tbody>
    </table>
    <nav
      aria-label="pagination navigation"
      class="pagination"
      role="navigation"
    >
      <ul>
        <li
          class="pagination-current"
        >
          <span
            aria-current="true"
            aria-label="current page, page 1"
          >
            1
          </span>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`Changelog renders changelog with pagination when results exceed 50 items 1`] = `
<div>
  <div
    class="changelog-filter col-md-3"
  >
    <div
      class="sidebar-filters"
    >
      <div
        class="filter-header"
      >
        <h3>
          refine-by
        </h3>
      </div>
      <input
        aria-label="Refine By Term"
        class="input-small text-filter"
        placeholder="contains-text"
        type="text"
      />
      <div
        class="filter-subsection jira-components semi-bold"
      >
        component
        <div
          class="filter-checkbox-container"
        >
          <label>
            <input
              class="filter-checkbox"
              name="component 0"
              type="checkbox"
              value="0"
            />
            <span
              class="filter-checkbox-label"
            >
              component 0
            </span>
          </label>
        </div>
        <div
          class="filter-checkbox-container"
        >
          <label>
            <input
              class="filter-checkbox"
              name="component 1"
              type="checkbox"
              value="1"
            />
            <span
              class="filter-checkbox-label"
            >
              component 1
            </span>
          </label>
        </div>
        <div
          class="filter-checkbox-container"
        >
          <label>
            <input
              class="filter-checkbox"
              name="component 2"
              type="checkbox"
              value="2"
            />
            <span
              class="filter-checkbox-label"
            >
              component 2
            </span>
          </label>
        </div>
        <div
          class="filter-checkbox-container"
        >
          <label>
            <input
              class="filter-checkbox"
              name="component 3"
              type="checkbox"
              value="3"
            />
            <span
              class="filter-checkbox-label"
            >
              component 3
            </span>
          </label>
        </div>
        <div
          class="filter-checkbox-container"
        >
          <label>
            <input
              class="filter-checkbox"
              name="component 4"
              type="checkbox"
              value="4"
            />
            <span
              class="filter-checkbox-label"
            >
              component 4
            </span>
          </label>
        </div>
        <div
          class="filter-checkbox-container"
        >
          <label>
            <input
              class="filter-checkbox"
              name="component 5"
              type="checkbox"
              value="5"
            />
            <span
              class="filter-checkbox-label"
            >
              component 5
            </span>
          </label>
        </div>
        <div
          class="filter-checkbox-container"
        >
          <label>
            <input
              class="filter-checkbox"
              name="component 6"
              type="checkbox"
              value="6"
            />
            <span
              class="filter-checkbox-label"
            >
              component 6
            </span>
          </label>
        </div>
      </div>
      <div
        class="more-options"
      >
        <button
          class="btn btn-md btn-link"
          type="button"
        >
          see-more
        </button>
      </div>
    </div>
    <a
      class="additional-info"
      href="/commerce-release-notes"
    >
      <div
        class="sidebar-cta"
      >
        <svg
          class="lexicon-icon-product-logo"
        >
          <use
            xlink:href="#commerce"
          />
        </svg>
        <h4>
          Liferay Commerce Release Notes
        </h4>
        <svg
          class="lexicon-icon lexicon-icon-arrow-right"
        >
          <use
            xlink:href="#arrow-right"
          />
        </svg>
      </div>
    </a>
  </div>
  <div
    class="col-md-9"
  >
    <h2
      id="changelog"
    >
      changelog
    </h2>
    <h5
      class="secondary-text-color section-subtitle"
    >
      description
    </h5>
    <div
      class="results-count secondary-font"
    >
      x-results
    </div>
    <table
      class="table changelog-table table-autofit table-list"
      role="table"
    >
      <thead>
        <tr>
          <th
            class="lfr-summary-column table-cell-content"
          >
            summary
          </th>
          <th
            class="lfr-component-column"
          >
            component
          </th>
          <th
            class="lfr-release-column"
          >
            release
             
            <svg
              aria-label="Sort"
              class="arrow-down desc lexicon-icon sorting-indicator"
              role="button"
            >
              <use
                xlink:href="#arrow-down"
              />
            </svg>
          </th>
          <th
            class="lfr-key-column"
          >
            key
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="journal-article-row"
          id="0GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 0
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 0
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              0
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="1GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 1
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 1
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              1
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="2GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 2
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 2
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              2
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="3GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 3
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 3
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              3
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="4GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 4
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 4
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              4
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="5GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 5
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 5
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              5
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="6GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 6
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 6
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              6
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="7GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 7
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 7
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              7
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="8GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 8
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 8
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              8
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="9GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 9
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 9
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              9
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="10GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 10
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 10
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              10
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="11GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 11
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 11
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              11
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="12GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 12
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 12
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              12
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="13GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 13
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 13
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              13
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="14GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 14
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 14
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              14
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="15GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 15
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 15
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              15
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="16GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 16
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 16
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              16
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="17GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 17
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 17
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              17
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="18GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 18
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 18
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              18
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="19GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 19
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 19
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              19
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="20GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 20
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 20
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              20
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="21GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 21
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 21
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              21
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="22GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 22
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 22
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              22
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="23GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 23
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 23
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              23
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="24GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 24
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 24
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              24
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="25GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 25
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 25
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              25
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="26GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 26
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 26
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              26
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="27GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 27
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 27
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              27
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="28GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 28
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 28
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              28
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="29GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 29
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 29
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              29
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="30GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 30
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 30
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              30
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="31GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 31
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 31
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              31
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="32GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 32
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 32
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              32
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="33GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 33
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 33
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              33
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="34GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 34
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 34
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              34
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="35GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 35
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 35
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              35
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="36GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 36
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 36
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              36
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="37GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 37
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 37
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              37
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="38GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 38
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 38
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              38
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="39GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 39
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 39
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              39
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="40GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 40
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 40
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              40
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="41GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 41
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 41
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              41
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="42GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 42
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 42
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              42
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="43GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 43
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 43
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              43
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="44GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 44
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 44
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              44
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="45GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 45
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 45
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              45
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="46GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 46
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 46
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              46
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="47GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 47
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 47
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              47
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="48GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 48
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 48
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              48
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="49GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 49
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 49
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              49
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="50GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 50
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            component 50
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              50
            </a>
          </td>
        </tr>
      </tbody>
    </table>
    <nav
      aria-label="pagination navigation"
      class="pagination"
      role="navigation"
    >
      <ul>
        <li
          class="pagination-current"
        >
          <span
            aria-current="true"
            aria-label="current page, page 1"
          >
            1
          </span>
        </li>
        <li
          class=""
        >
          <button
            aria-label="go to page 2"
            class="btn-unstyled"
            type="button"
            value="2"
          >
            2
          </button>
        </li>
        <li
          class=""
        >
          <button
            aria-label="go to page ›"
            class="btn-unstyled"
            type="button"
            value="2"
          >
            ›
          </button>
        </li>
        <li
          class=""
        >
          <button
            aria-label="go to page »"
            class="btn-unstyled"
            type="button"
            value="2"
          >
            »
          </button>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`Changelog renders details modal when a ticket summary is clicked 1`] = `
<div>
  <div
    class="changelog-filter col-md-3"
  >
    <div
      class="sidebar-filters"
    >
      <div
        class="filter-header"
      >
        <h3>
          refine-by
        </h3>
      </div>
      <input
        aria-label="Refine By Term"
        class="input-small text-filter"
        placeholder="contains-text"
        type="text"
      />
      <div
        class="filter-subsection jira-components semi-bold"
      >
        component
        <div
          class="filter-checkbox-container"
        >
          <label>
            <input
              class="filter-checkbox"
              name="component 0"
              type="checkbox"
              value="0"
            />
            <span
              class="filter-checkbox-label"
            >
              component 0
            </span>
          </label>
        </div>
        <div
          class="filter-checkbox-container"
        >
          <label>
            <input
              class="filter-checkbox"
              name="component 1"
              type="checkbox"
              value="1"
            />
            <span
              class="filter-checkbox-label"
            >
              component 1
            </span>
          </label>
        </div>
        <div
          class="filter-checkbox-container"
        >
          <label>
            <input
              class="filter-checkbox"
              name="component 2"
              type="checkbox"
              value="2"
            />
            <span
              class="filter-checkbox-label"
            >
              component 2
            </span>
          </label>
        </div>
        <div
          class="filter-checkbox-container"
        >
          <label>
            <input
              class="filter-checkbox"
              name="component 3"
              type="checkbox"
              value="3"
            />
            <span
              class="filter-checkbox-label"
            >
              component 3
            </span>
          </label>
        </div>
        <div
          class="filter-checkbox-container"
        >
          <label>
            <input
              class="filter-checkbox"
              name="component 4"
              type="checkbox"
              value="4"
            />
            <span
              class="filter-checkbox-label"
            >
              component 4
            </span>
          </label>
        </div>
        <div
          class="filter-checkbox-container"
        >
          <label>
            <input
              class="filter-checkbox"
              name="component 5"
              type="checkbox"
              value="5"
            />
            <span
              class="filter-checkbox-label"
            >
              component 5
            </span>
          </label>
        </div>
        <div
          class="filter-checkbox-container"
        >
          <label>
            <input
              class="filter-checkbox"
              name="component 6"
              type="checkbox"
              value="6"
            />
            <span
              class="filter-checkbox-label"
            >
              component 6
            </span>
          </label>
        </div>
      </div>
      <div
        class="more-options"
      >
        <button
          class="btn btn-md btn-link"
          type="button"
        >
          see-more
        </button>
      </div>
    </div>
    <a
      class="additional-info"
      href="/commerce-release-notes"
    >
      <div
        class="sidebar-cta"
      >
        <svg
          class="lexicon-icon-product-logo"
        >
          <use
            xlink:href="#commerce"
          />
        </svg>
        <h4>
          Liferay Commerce Release Notes
        </h4>
        <svg
          class="lexicon-icon lexicon-icon-arrow-right"
        >
          <use
            xlink:href="#arrow-right"
          />
        </svg>
      </div>
    </a>
  </div>
  <div
    class="col-md-9"
  >
    <h2
      id="changelog"
    >
      changelog
    </h2>
    <h5
      class="secondary-text-color section-subtitle"
    >
      description
    </h5>
    <div
      class="results-count secondary-font"
    >
      x-results
    </div>
    <table
      class="table changelog-table table-autofit table-list"
      role="table"
    >
      <thead>
        <tr>
          <th
            class="lfr-summary-column table-cell-content"
          >
            summary
          </th>
          <th
            class="lfr-component-column"
          >
            component
          </th>
          <th
            class="lfr-release-column"
          >
            release
             
            <svg
              aria-label="Sort"
              class="arrow-down desc lexicon-icon sorting-indicator"
              role="button"
            >
              <use
                xlink:href="#arrow-down"
              />
            </svg>
          </th>
          <th
            class="lfr-key-column"
          >
            key
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="journal-article-row"
          id="LPD-90100GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 1
            </button>
            <div
              class="modal show slide-enter slide-enter-active"
              role="dialog"
              tabindex="-1"
            >
              <div
                class="modal-dialog"
              >
                <div
                  class="modal-content"
                >
                  <div
                    class="modal-header"
                  >
                    <div
                      class="modal-title"
                    >
                      details
                    </div>
                    <button
                      aria-label="Close"
                      class="close"
                      type="button"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-times"
                      >
                        <use
                          xlink:href="#times"
                        />
                      </svg>
                    </button>
                  </div>
                  <div
                    class="modal-body"
                  >
                    <div
                      class="ticket-detail"
                    >
                      <div
                        class="small-title"
                      >
                        summary 1
                      </div>
                      <h3>
                        description
                      </h3>
                      <div>
                        description
                      </div>
                      <h3>
                        components
                      </h3>
                      Frontend Infrastructure &gt; WYSIWYG
                      <h3>
                        release
                      </h3>
                      GA
                      <h3>
                        key
                      </h3>
                      <a
                        href="/"
                      >
                        LPD-90100
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </td>
          <td
            class="lfr-component-column"
          >
            Frontend Infrastructure &gt; WYSIWYG
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              LPD-90100
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="LPD-85155GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 2
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            Accessibility
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              LPD-85155
            </a>
          </td>
        </tr>
      </tbody>
    </table>
    <nav
      aria-label="pagination navigation"
      class="pagination"
      role="navigation"
    >
      <ul>
        <li
          class="pagination-current"
        >
          <span
            aria-current="true"
            aria-label="current page, page 1"
          >
            1
          </span>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`Changelog renders no results correctly 1`] = `
<div>
  <div
    class="changelog-filter col-md-3"
  >
    <div
      class="sidebar-filters"
    >
      <div
        class="filter-header"
      >
        <h3>
          refine-by
        </h3>
      </div>
      <input
        aria-label="Refine By Term"
        class="input-small text-filter"
        placeholder="contains-text"
        type="text"
      />
      <div
        class="filter-subsection jira-components semi-bold"
      >
        component
        <div
          class="filter-checkbox-container"
        >
          <label>
            <input
              class="filter-checkbox"
              name="component 0"
              type="checkbox"
              value="0"
            />
            <span
              class="filter-checkbox-label"
            >
              component 0
            </span>
          </label>
        </div>
        <div
          class="filter-checkbox-container"
        >
          <label>
            <input
              class="filter-checkbox"
              name="component 1"
              type="checkbox"
              value="1"
            />
            <span
              class="filter-checkbox-label"
            >
              component 1
            </span>
          </label>
        </div>
        <div
          class="filter-checkbox-container"
        >
          <label>
            <input
              class="filter-checkbox"
              name="component 2"
              type="checkbox"
              value="2"
            />
            <span
              class="filter-checkbox-label"
            >
              component 2
            </span>
          </label>
        </div>
        <div
          class="filter-checkbox-container"
        >
          <label>
            <input
              class="filter-checkbox"
              name="component 3"
              type="checkbox"
              value="3"
            />
            <span
              class="filter-checkbox-label"
            >
              component 3
            </span>
          </label>
        </div>
        <div
          class="filter-checkbox-container"
        >
          <label>
            <input
              class="filter-checkbox"
              name="component 4"
              type="checkbox"
              value="4"
            />
            <span
              class="filter-checkbox-label"
            >
              component 4
            </span>
          </label>
        </div>
        <div
          class="filter-checkbox-container"
        >
          <label>
            <input
              class="filter-checkbox"
              name="component 5"
              type="checkbox"
              value="5"
            />
            <span
              class="filter-checkbox-label"
            >
              component 5
            </span>
          </label>
        </div>
        <div
          class="filter-checkbox-container"
        >
          <label>
            <input
              class="filter-checkbox"
              name="component 6"
              type="checkbox"
              value="6"
            />
            <span
              class="filter-checkbox-label"
            >
              component 6
            </span>
          </label>
        </div>
      </div>
      <div
        class="more-options"
      >
        <button
          class="btn btn-md btn-link"
          type="button"
        >
          see-more
        </button>
      </div>
    </div>
    <a
      class="additional-info"
      href="/commerce-release-notes"
    >
      <div
        class="sidebar-cta"
      >
        <svg
          class="lexicon-icon-product-logo"
        >
          <use
            xlink:href="#commerce"
          />
        </svg>
        <h4>
          Liferay Commerce Release Notes
        </h4>
        <svg
          class="lexicon-icon lexicon-icon-arrow-right"
        >
          <use
            xlink:href="#arrow-right"
          />
        </svg>
      </div>
    </a>
  </div>
  <div
    class="col-md-9"
  >
    <h2
      id="changelog"
    >
      changelog
    </h2>
    <h5
      class="secondary-text-color section-subtitle"
    >
      description
    </h5>
    <div
      class="results-count secondary-font"
    >
      x-results
    </div>
    <table
      class="table changelog-table table-autofit table-list"
      role="table"
    >
      <thead>
        <tr>
          <th
            class="lfr-summary-column table-cell-content"
          >
            summary
          </th>
          <th
            class="lfr-component-column"
          >
            component
          </th>
          <th
            class="lfr-release-column"
          >
            release
             
            <svg
              aria-label="Sort"
              class="arrow-down desc lexicon-icon sorting-indicator"
              role="button"
            >
              <use
                xlink:href="#arrow-down"
              />
            </svg>
          </th>
          <th
            class="lfr-key-column"
          >
            key
          </th>
        </tr>
      </thead>
      <tbody />
    </table>
    <div
      class="no-results"
    >
      no-results-found-to-match-your-selection
      <h5
        class="secondary-text-color"
      >
        try-modifying-your-criteria
      </h5>
    </div>
    <nav
      aria-label="pagination navigation"
      class="pagination"
      role="navigation"
    >
      <ul>
        <li
          class="pagination-current"
        >
          <span
            aria-current="true"
            aria-label="current page, page 1"
          >
            1
          </span>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`Changelog updates details modal when a different ticket summary is clicked 1`] = `
<div>
  <div
    class="changelog-filter col-md-3"
  >
    <div
      class="sidebar-filters"
    >
      <div
        class="filter-header"
      >
        <h3>
          refine-by
        </h3>
      </div>
      <input
        aria-label="Refine By Term"
        class="input-small text-filter"
        placeholder="contains-text"
        type="text"
      />
      <div
        class="filter-subsection jira-components semi-bold"
      >
        component
        <div
          class="filter-checkbox-container"
        >
          <label>
            <input
              class="filter-checkbox"
              name="component 0"
              type="checkbox"
              value="0"
            />
            <span
              class="filter-checkbox-label"
            >
              component 0
            </span>
          </label>
        </div>
        <div
          class="filter-checkbox-container"
        >
          <label>
            <input
              class="filter-checkbox"
              name="component 1"
              type="checkbox"
              value="1"
            />
            <span
              class="filter-checkbox-label"
            >
              component 1
            </span>
          </label>
        </div>
        <div
          class="filter-checkbox-container"
        >
          <label>
            <input
              class="filter-checkbox"
              name="component 2"
              type="checkbox"
              value="2"
            />
            <span
              class="filter-checkbox-label"
            >
              component 2
            </span>
          </label>
        </div>
        <div
          class="filter-checkbox-container"
        >
          <label>
            <input
              class="filter-checkbox"
              name="component 3"
              type="checkbox"
              value="3"
            />
            <span
              class="filter-checkbox-label"
            >
              component 3
            </span>
          </label>
        </div>
        <div
          class="filter-checkbox-container"
        >
          <label>
            <input
              class="filter-checkbox"
              name="component 4"
              type="checkbox"
              value="4"
            />
            <span
              class="filter-checkbox-label"
            >
              component 4
            </span>
          </label>
        </div>
        <div
          class="filter-checkbox-container"
        >
          <label>
            <input
              class="filter-checkbox"
              name="component 5"
              type="checkbox"
              value="5"
            />
            <span
              class="filter-checkbox-label"
            >
              component 5
            </span>
          </label>
        </div>
        <div
          class="filter-checkbox-container"
        >
          <label>
            <input
              class="filter-checkbox"
              name="component 6"
              type="checkbox"
              value="6"
            />
            <span
              class="filter-checkbox-label"
            >
              component 6
            </span>
          </label>
        </div>
      </div>
      <div
        class="more-options"
      >
        <button
          class="btn btn-md btn-link"
          type="button"
        >
          see-more
        </button>
      </div>
    </div>
    <a
      class="additional-info"
      href="/commerce-release-notes"
    >
      <div
        class="sidebar-cta"
      >
        <svg
          class="lexicon-icon-product-logo"
        >
          <use
            xlink:href="#commerce"
          />
        </svg>
        <h4>
          Liferay Commerce Release Notes
        </h4>
        <svg
          class="lexicon-icon lexicon-icon-arrow-right"
        >
          <use
            xlink:href="#arrow-right"
          />
        </svg>
      </div>
    </a>
  </div>
  <div
    class="col-md-9"
  >
    <h2
      id="changelog"
    >
      changelog
    </h2>
    <h5
      class="secondary-text-color section-subtitle"
    >
      description
    </h5>
    <div
      class="results-count secondary-font"
    >
      x-results
    </div>
    <table
      class="table changelog-table table-autofit table-list"
      role="table"
    >
      <thead>
        <tr>
          <th
            class="lfr-summary-column table-cell-content"
          >
            summary
          </th>
          <th
            class="lfr-component-column"
          >
            component
          </th>
          <th
            class="lfr-release-column"
          >
            release
             
            <svg
              aria-label="Sort"
              class="arrow-down desc lexicon-icon sorting-indicator"
              role="button"
            >
              <use
                xlink:href="#arrow-down"
              />
            </svg>
          </th>
          <th
            class="lfr-key-column"
          >
            key
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="journal-article-row"
          id="LPD-90100GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 1
            </button>
          </td>
          <td
            class="lfr-component-column"
          >
            Frontend Infrastructure &gt; WYSIWYG
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              LPD-90100
            </a>
          </td>
        </tr>
        <tr
          class="journal-article-row"
          id="LPD-85155GA"
        >
          <td
            class="lfr-summary-column table-cell-content"
          >
            <button
              class="btn btn-md btn-link"
              type="button"
            >
              summary 2
            </button>
            <div
              class="modal show slide-exit-done"
              role="dialog"
              tabindex="-1"
            >
              <div
                class="modal-dialog"
              >
                <div
                  class="modal-content"
                >
                  <div
                    class="modal-header"
                  >
                    <div
                      class="modal-title"
                    >
                      details
                    </div>
                    <button
                      aria-label="Close"
                      class="close"
                      type="button"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-times"
                      >
                        <use
                          xlink:href="#times"
                        />
                      </svg>
                    </button>
                  </div>
                  <div
                    class="modal-body"
                  >
                    <div
                      class="ticket-detail"
                    >
                      <div
                        class="small-title"
                      >
                        summary 2
                      </div>
                      <h3>
                        description
                      </h3>
                      <div>
                        description 2
                      </div>
                      <h3>
                        components
                      </h3>
                      Accessibility
                      <h3>
                        release
                      </h3>
                      GA
                      <h3>
                        key
                      </h3>
                      <a
                        href="/"
                      >
                        LPD-85155
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </td>
          <td
            class="lfr-component-column"
          >
            Accessibility
          </td>
          <td
            class="lfr-release-column"
          >
            GA
          </td>
          <td
            class="lfr-key-column"
          >
            <a
              href="/"
            >
              LPD-85155
            </a>
          </td>
        </tr>
      </tbody>
    </table>
    <nav
      aria-label="pagination navigation"
      class="pagination"
      role="navigation"
    >
      <ul>
        <li
          class="pagination-current"
        >
          <span
            aria-current="true"
            aria-label="current page, page 1"
          >
            1
          </span>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;
